# GroupProject

catkin_ws/src/RosPub/: CMakeLists.txt  package.xml
catkin_ws/src/RosPub/src/: Pub.cpp
catkin_ws/src/localization/: CMakeLists.txt  package.xml
catkin_ws/src/localization/include/: aruco_detection.h  pose_estimation.h  thread.h
catkin_ws/src/localization/launch/: aruco.launch
catkin_ws/src/localization/src/: aruco_detection.cpp  aruco_loc_node.cpp  pose_estimation.cpp  thread.cpp
