<?xml version="1.0"?>
<package>
  <name>aruco_loc</name>
  <version>0.0.0</version>
  <description>The aruco_loc</description>
  <maintainer email="manuelbaumann93@gmail.com">Manuel Baumann</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
